--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,21 @@
-name: Upload Registration form to Website
-
+name: Upload Website
 on:
   push:
     branches:
     - master
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-    - uses: actions/checkout@v1
-    
+      uses: actions/checkout@v1
+
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: ap-southeast-1
 
-    # - name: change directory to public folder
-    #   run: |
-    #    cd /home/runner/work/elite-aws-s3-static-website-terraform/elite-aws-s3-static-website-terraform/public
-
-    # Copy the files from the site directory to the bucket
-    - name: Copy files to the development website with the AWS CLI
-      run: |
+    - name: Deploy static site to S3 bucket
        aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }}
