--- a/.github/workflows/s3deploy.yml
+++ b/.github/workflows/s3deploy.yml
@@ -1,4 +1,4 @@
-name: Upload Website
+name: deploy
 on:
   push:
     branches:
@@ -6,6 +6,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout
       uses: actions/checkout@v1
