--- a/.github/workflows/bucket.yml
+++ b/.github/workflows/bucket.yml
@@ -16,8 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-southeast-1
+        aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
        aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }}
-       
