--- a/.github/workflows/bucket.yml
+++ b/.github/workflows/bucket.yml
@@ -3,7 +3,7 @@ name: Upload Website
 on:
   push:
     branches:
-    - master
+      - master
 
 jobs:
   deploy:
@@ -20,4 +20,4 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
-       aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }}
+      run: aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }}
