--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -19,8 +19,8 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: change directory
-      run: cd /home/runner/work/elite-aws-webstatic-cicd-iac/elite-aws-webstatic-cicd-iac/public
+    - name: change directory & Deploy static site to S3 bucket
+      run: cd /home/runner/work/elite-aws-webstatic-cicd-iac/elite-aws-webstatic-cicd-iac/public && aws s3 sync ./public/ s3://${{ secrets.S3_BUCKET_NAME }}
 
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }}
+    # - name: Deploy static site to S3 bucket
+    #   run: aws s3 sync ./public/ s3://${{ secrets.S3_BUCKET_NAME }}
